--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Villa.Connect - Open Source</title>
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+    <script>
+      window.OneSignalDeferred = window.OneSignalDeferred || [];
+      OneSignalDeferred.push(async function (OneSignal) {
+        await OneSignal.init({
+          appId: '66491a55-1ca4-43f4-a3ad-ec07abafaf4d',
+          safari_web_id: 'web.onesignal.auto.18f55e14-9585-4855-a0ee-ea6515e10e22',
+          notifyButton: {
+            enable: true,
+          },
+        });
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
