--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Villa.Connect is an open-source website that provides a platform for developers to showcase their profiles. With Villa.Connect, users can easily search and find developers based on their specific needs. Whether you're looking for a web developer or a mobile app developer, Villa.Connect has got you covered. Discover the perfect developer for your project!"
+      content="Villa.Connect - Connect. Contribute. Collaborate."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/villa.jpeg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/villa.jpeg" />
